Consolidated Thumbnail and Thumbnail2, ThumbnailUtils and ThumbnailUtils2, as well as adding javadoc and inline comments to the modelInterface graphics and table improvements.